finished section "process"
without adaptivity

--- a/index.html
+++ b/index.html
@@ -233,6 +233,49 @@
 					</div>
 				</div>
 			</section>
+			<section class="process">
+				<div class="container">
+					<div class="process__body">
+						<div class="process__info">
+							<h2 class="process__title section-title">
+								We follow a clear process to help you out
+							</h2>
+							<p class="process__text">
+								Through True Rich Attended does no end it his mother since real had half every him case in packages enquire
+							</p>
+							<a class="process__btn btn" href="#">
+								Learn more
+							</a>
+						</div>
+						<ol class="process__list">
+							<li class="process__item process-item">
+								<h3 class="process-item__title">
+									Get a Quote
+								</h3>
+								<p class="process-item__text">
+									Through True Rich Attended does no end it his mother since real had half every
+								</p>
+							</li>
+							<li class="process__item process-item">
+								<h3 class="process-item__title">
+									Book an Appointment
+								</h3>
+								<p class="process-item__text">
+									Through True Rich Attended does no end it his mother since real had half every
+								</p>
+							</li>
+							<li class="process__item process-item">
+								<h3 class="process-item__title">
+									Get your Service Done
+								</h3>
+								<p class="process-item__text">
+									Through True Rich Attended does no end it his mother since real had half every
+								</p>
+							</li>
+						</ol>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
