finished section 'call-to-action' (+ adaptivity)

--- a/index.html
+++ b/index.html
@@ -276,6 +276,26 @@
 					</div>
 				</div>
 			</section>
+			<section class="call-to-action">
+				<div class="call-to-action__image-box">
+					<div class="call-to-action__image">
+						<img src="./images/cta/image-1.jpg" alt="A man repairs a car">
+					</div>
+					<div class="call-to-action__image">
+						<img src="./images/cta/image-2.jpg" alt="Inner elements of a car">
+					</div>
+				</div>
+				<div class="container">
+					<div class="call-to-action__body">
+						<h2 class="call-to-action__title">
+							Get in touch with us for your service related query
+						</h2>
+						<a class="call-to-action__btn btn btn--black" href="#">
+							Contact Us
+						</a>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
