finished 'experience' section (+ adaptivity)

--- a/index.html
+++ b/index.html
@@ -296,6 +296,44 @@
 					</div>
 				</div>
 			</section>
+			<div class="experience">
+				<div class="container">
+					<ul class="experience__list">
+						<li class="experience__item">
+							<div class="experience__number">
+								20+
+							</div>
+							<p class="experience__text">
+								Proffesional
+							</p>
+						</li>
+						<li class="experience__item">
+							<div class="experience__number">
+								10+
+							</div>
+							<p class="experience__text">
+								Years Eperience
+							</p>
+						</li>
+						<li class="experience__item">
+							<div class="experience__number">
+								12K+
+							</div>
+							<p class="experience__text">
+								Service Closed
+							</p>
+						</li>
+						<li class="experience__item">
+							<div class="experience__number">
+								100%
+							</div>
+							<p class="experience__text">
+								Customer Satisfaction
+							</p>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</main>
 	</div>
 </body>
