finished the 'brands' section (+ adaptivity)

--- a/index.html
+++ b/index.html
@@ -334,6 +334,67 @@
 					</ul>
 				</div>
 			</div>
+			<section class="brands">
+				<div class="container">
+					<div class="brands__body">
+						<h2 class="brands__title section-title">
+							Brands we Serve
+						</h2>
+						<ul class="brands__list">
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-1.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-2.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-3.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-4.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-5.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-1.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-2.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-3.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-4.svg" alt="logo">
+								</a>
+							</li>
+							<li class="brands__item">
+								<a class="brands__link" href="#">
+									<img src="./images/brands/logo-5.svg" alt="logo">
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
