finished the 'blog' section
(without JS)

--- a/index.html
+++ b/index.html
@@ -395,6 +395,124 @@
 					</div>
 				</div>
 			</section>
+			<section class="blog">
+				<div class="container">
+					<div class="blog__body">
+						<h2 class="blog__title section-title">
+							Our blog
+						</h2>
+						<ul class="blog__categories-list categories">
+							<li class="categories__item">
+								<button class="categories__btn active" type="button" data-btn="latest">Latest</button>
+							</li>
+							<li class="categories__item">
+								<button class="categories__btn" type="button" data-btn="popular">Popular</button>
+							</li>
+							<li class="categories__item">
+								<button class="categories__btn" type="button" data-btn="favorites">Favorites</button>
+							</li>
+						</ul>
+						<ul class="blog__articles-list">
+							<li class="blog__article article" data-id="1" data-views="10" data-likes="0">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-1.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										1 Genius Car Accessories You Should Never Drive Without
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+							<li class="blog__article article" data-id="2" data-views="205" data-likes="105">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-2.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										2 Genius Car Accessories You Should Never Drive Without
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+							<li class="blog__article article" data-id="3" data-views="120" data-likes="55">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-3.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										3 We provide blow straight past it with the wheels skidding
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+							<li class="blog__article article" data-id="4" data-views="50" data-likes="5">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-4.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										4 We provide blow straight past it with the wheels skidding
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+							<li class="blog__article article" data-id="5" data-views="200" data-likes="10">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-5.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										5 Genius Car Accessories You Should Never Drive Without
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+							<li class="blog__article article" data-id="8" data-views="100" data-likes="5">
+								<a class="article__link-wrapper" href="#">
+									<div class="article__image">
+										<img src="./images/blog/image-6.jpg" alt="Image">
+									</div>
+									<p class="article__date">
+										Posted on October 6th 2021
+									</p>
+									<h3 class="article__title">
+										8 Genius Car Accessories You Should Never Drive Without
+									</h3>
+									<p class="article__text">
+										We provide a full range of front end mechanical repairs for all makes and models We provide a full range of front end mechanical repairs for all makes and models
+									</p>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
