finished the 'faq' section

--- a/index.html
+++ b/index.html
@@ -624,6 +624,70 @@
 					</div>
 				</div>
 			</section>
+			<section class="faq">
+				<div class="container container--small">
+					<div class="faq__body">
+						<h2 class="faq__title section-title">
+							Frequently Asked Questions
+						</h2>
+						<ul class="faq__list">
+							<li class="faq__item spoiler active">
+								<h3 class="spoiler__title">
+									How long should a car repair take?<span></span>
+								</h3>
+								<div class="spoiler__content">
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+								</div>
+							</li>
+							<li class="faq__item spoiler">
+								<h3 class="spoiler__title">
+									How do I schedule my car's appointment?<span></span>
+								</h3>
+								<div class="spoiler__content">
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+								</div>
+							</li>
+							<li class="faq__item spoiler">
+								<h3 class="spoiler__title">
+									What are the repair services provided?<span></span>
+								</h3>
+								<div class="spoiler__content">
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+								</div>
+							</li>
+							<li class="faq__item spoiler">
+								<h3 class="spoiler__title">
+									How do I find auto body shops near me?<span></span>
+								</h3>
+								<div class="spoiler__content">
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+								</div>
+							</li>
+							<li class="faq__item spoiler">
+								<h3 class="spoiler__title">
+									Genuine spare parts during car repair?<span></span>
+								</h3>
+								<div class="spoiler__content">
+									<p>
+										I have got my car repaired at Finsweet many times before, they are good at what they do. Not only did they repair my car I have got my car repaired at Finsweet I have got my car repaired at Finsweet
+									</p>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
