--- a/index.html
+++ b/index.html
@@ -688,6 +688,87 @@
 					</div>
 				</div>
 			</section>
+			<section class="get-in-touch">
+				<div class="container">
+					<div class="get-in-touch__body">
+						<h2 class="get-in-touch__title section-title">
+							Get in touch with our experts
+						</h2>
+						<div class="get-in-touch__contacts-box">
+							<form class="get-in-touch__form form">
+								<input class="form__input" type="text" placeholder="Your full Name" required>
+								<input class="form__input" type="email" placeholder="Your Email" required>
+								<div class="form__select" data-select>
+									<div class="form__select-input-box">
+										<input class="form__input" data-select-input type="text" placeholder="Select service type">
+									</div>
+									<ul data-select-list>
+										<li class="active" data-select-value="">
+											<button type="button">
+												Select service type
+											</button>
+										</li>
+										<li data-select-value="Diagnostics">
+											<button type="button">
+												Diagnostics
+											</button>
+										</li>
+										<li data-select-value="Engine Repair">
+											<button type="button">
+												Engine Repair
+											</button>
+										</li>
+										<li data-select-value="Wheel Repair">
+											<button type="button">
+												Wheel Repair
+											</button>
+										</li>
+									</ul>
+								</div>
+								<textarea class="form__textarea form__input" placeholder="Message" required></textarea>
+								<button class="form__btn btn" type="submit">
+									Send message
+								</button>
+							</form>
+							<address class="get-in-touch__address address">
+								<div class="address__item">
+									<p class="address__title">
+										Address
+									</p>
+									<p class="address__text">
+										NH 234 Public Square San Francisco 65368
+									</p>
+								</div>
+								<div class="address__item">
+									<p class="address__title">
+										Contact Details
+									</p>
+									<a class="address__link" href="tel:18002652452">
+										+18 (00) 265-24-52
+									</a>
+									<a class="address__link" href="mailto:Finsweet@gmail.com">
+										Finsweet@gmail.com
+									</a>
+								</div>
+								<div class="address__item">
+									<p class="address__title">
+										Opening Hours
+									</p>
+									<p class="address__text">
+										Monday to Friday 9:00 AM to 10:00 AM
+									</p>
+								</div>
+							</address>
+						</div>
+						<div class="get-in-touch__map">
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2z0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sby!4v1699093014209!5m2!1sru!2sby" width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						</div>
+					</div>
+				</div>
+				<div class="get-in-touch__image">
+					<img src="./images/get-in-touch-bg.jpg" alt="Background image">
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
