--- a/index.html
+++ b/index.html
@@ -770,6 +770,106 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer__top footer-top">
+				<div class="container">
+					<div class="footer-top__body">
+						<div class="footer-top__info">
+							<h2 class="footer-top__title">
+								Get in touch with us for your service
+							</h2>
+							<ul class="footer-top__social social">
+								<li class="social__item">
+									<a class="social__link" href="#">
+										<svg>
+											<use xlink:href='./images/sprite.svg#fb'></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social__item">
+									<a class="social__link" href="#">
+										<svg>
+											<use xlink:href='./images/sprite.svg#tw'></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social__item">
+									<a class="social__link" href="#">
+										<svg>
+											<use xlink:href='./images/sprite.svg#inst'></use>
+										</svg>
+									</a>
+								</li>
+								<li class="social__item">
+									<a class="social__link" href="#">
+										<svg>
+											<use xlink:href='./images/sprite.svg#in'></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</div>
+						<address class="footer-top__address address">
+							<div class="address__item">
+								<p class="address__title">
+									Help line Number
+								</p>
+								<a class="address__link" href="tel:18002652452">
+									+18 (00) 265-24-52
+								</a>
+							</div>
+							<div class="address__item">
+								<p class="address__title">
+									Address
+								</p>
+								<p class="address__text">
+									NH 234 Public Square San Francisco 65368
+								</p>
+							</div>
+							<div class="address__item">
+								<p class="address__title">
+									We are open
+								</p>
+								<p class="address__text">
+									Monday to Friday 9:00 AM to 10:00 AM
+								</p>
+							</div>
+						</address>
+					</div>
+				</div>
+			</div>
+			<div class="footer__bottom footer-bottom">
+				<div class="container">
+					<div class="footer-bottom__body">
+						<a class="footer-bottom__logo logo" href="#">
+							<img src="./images/footer-logo.svg" alt="Footer logo">
+						</a>
+						<nav class="footer-bottom__menu menu">
+							<ul class="menu__list">
+								<li class="menu__item">
+									<a class="menu__link" href="#">Home</a>
+								</li>
+								<li class="menu__item">
+									<a class="menu__link" href="#">About us</a>
+								</li>
+								<li class="menu__item">
+									<a class="menu__link" href="#">Services</a>
+								</li>
+								<li class="menu__item">
+									<a class="menu__link" href="#">Blog</a>
+								</li>
+								<li class="menu__item">
+									<a class="menu__link" href="#">Contact</a>
+								</li>
+							</ul>
+						</nav>
+						<small class="footer-bottom__copy">
+							&copy; Copyright Finsweet 2023 - <span class="copy-year"></span>
+						</small>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 
